Use valueOf in preference to "new".  Also add TODO items about interning done by boxing conversions.